# peter_simulation

clutter_helper/: CMakeLists.txt  package.xml
clutter_helper/config/: capture_objects.rviz  clustered_clutter_config-largeclusters.yaml  clustered_clutter_config-singlecluster-twoways.yaml  clustered_clutter_config-singlecluster.yaml  clustered_clutter_config.yaml  file.yaml  object_location.yaml  object_location_line.yaml
clutter_helper/launch/: set_clutter.launch
clutter_helper/src/: clustered_clutter.cpp  odom_to_path.cpp  set_clutter.cpp
clutter_helper/worlds/: empty.world
robots_description/: CMakeLists.txt  package.xml
robots_description/robots/uni_bonn_robotino/urdf/: properties.urdf.xacro  robotino.urdf.xacro
robots_description/urdf/: hokuyo.urdf.xacro  kinect.urdf.xacro  robotino_body.urdf.xacro
simulated_navigation_launch/: CMakeLists.txt  package.xml
simulated_navigation_launch/config/map_server/: map_server.yaml  map_serverIROS16.yaml  room_closed_10m_4m.yaml  room_closed_20m_8m.yaml  room_closed_30m_12m.yaml  walls.yaml
simulated_navigation_launch/config/move_base/: base_global_planner.yaml  base_local_planner_dwa.yaml  base_local_planner_params.yaml  base_local_planner_trajectory_ros.yaml  global_costmap_common_params_clutter.yaml  global_costmap_common_params_complete.yaml  global_costmap_common_params_prediction.yaml  global_costmap_common_params_standard.yaml  global_costmap_params.yaml  local_costmap_common_params.yaml  local_costmap_params.yaml  move_base.yaml  pid_local_planner.yaml
simulated_navigation_launch/config/rviz/: clutter_navigation.rviz  config.rviz
simulated_navigation_launch/launch/: mapserver_movebase.launch  rviz_clutter_navigation.launch  rviz_for_rosbag.launch  simple_goal_pub.launch  simulated_navigation.launch  simulated_robot.launch  simulated_world.launch  static_transforms.launch
simulated_navigation_launch/scripts/: object_location1.yaml
simulated_navigation_launch/scripts/object_files/O32_X40Y32_X48Y36/: object_location1.yaml  object_location2.yaml  object_location3.yaml  object_location4.yaml  object_location6.yaml
simulated_navigation_launch/scripts/object_files/O48_X40Y32_X48Y36/: object_location1.yaml  object_location2.yaml  object_location3.yaml  object_location4.yaml  object_location5.yaml  object_location6.yaml
simulated_navigation_launch/scripts/object_files/O55_X40Y32_X48Y36/: object_location1.yaml  object_location2.yaml  object_location3.yaml  object_location4.yaml  object_location5.yaml  object_location6.yaml
simulated_navigation_launch/scripts/object_files/O64_X40Y295_X48Y335_oneWall/: object_location1.yaml  object_location2.yaml  object_location3.yaml
simulated_navigation_launch/scripts/object_files/O64_X40Y32_X48Y36/: object_location1.yaml  object_location3.yaml  object_location4.yaml  object_location5.yaml  object_location6.yaml
simulated_navigation_launch/scripts/object_files/O71_X40Y295_X48Y335_oneWall/: object_location1.yaml  object_location2.yaml  object_location3.yaml  object_location4.yaml
simulated_navigation_launch/scripts/object_files/O71_X40Y32_X48Y36/: object_location2.yaml  object_location3.yaml  object_location4.yaml  object_location5.yaml  object_location6.yaml
simulated_navigation_launch/scripts/object_files/corridor/: object_location1.yaml  object_location2.yaml  object_location3.yaml
simulated_navigation_launch/scripts/object_files_boxes/O32_X40Y32_X48Y36/: object_location1.yaml  object_location2.yaml  object_location4.yaml  object_location5.yaml  object_location6.yaml
simulated_navigation_launch/src/: simple_goal_publisher.cpp
simulated_worlds/: CMakeLists.txt  package.xml
simulated_worlds/config/: object_locations.yaml
simulated_worlds/launch/: gazebo_server_client.launch  upload_object_locations.launch  world.launch
simulated_worlds/media/models/room_closed_10m_4m/: model-1_2.sdf  (+4 more)
simulated_worlds/worlds/: room_closed_10m_4m.world  room_closed_20m_8m.world  room_closed_30m_12m.world  room_with_walls.world  sim_iros16.world  willow_office.world
(+144 files in other folders)
