<?xml version="1.0"?>
<package>
  <name>robots_description</name>
  <version>0.0.0</version>
  <description>The robots description package</description>

  <license>BSD</license>
  
  <maintainer email="nhg@ipa.fhg.de">Nadia Hammoudeh Garcia</maintainer>
  <author email="nhg@ipa.fhg.de">Nadia Hammoudeh Garcia</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>xacro</build_depend>

  <run_depend>gazebo_ros</run_depend>
  <run_depend>xacro</run_depend>

  <export>
  </export>
</package>
