<?xml version="1.0"?>
<package>
  <name>simulated_navigation_launch</name>
  <version>0.0.0</version>
  <description>simulated_navigation_launch package</description>

  <maintainer email="pregier@todo.todo">pregier</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>gazebo_ros</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>move_base_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>global_planner</build_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>move_base_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>global_planner</run_depend>

  <export>
  </export>
</package>
